# test-riscv32

./: -Cargo.toml  Cargo.toml  README.md
cunt/: Cargo.toml
cunt/elf/: my_bin1-f4ac7b04c8235d8f  riscv32im-succinct-zkvm-elf  riscv32im-succinct-zkvm-elf-test
cunt/src/: bin1.rs  bin2.rs  main.rs  zk.rs
hello-world/: Cargo.toml  out.txt
hello-world/host/src/: main.rs
hello-world/methods/: Cargo.toml  build.rs  utils.rs
hello-world/methods/guest/: .rustc_info.json  Cargo.toml
hello-world/methods/guest/src/: main.rs
hello-world/methods/src/: lib.rs  methods.rs
pipeline/: Cargo.toml
pipeline/src/: bin.rs  tests.rs  utils.rs
program/: Cargo.toml
program/elf/: riscv32im-succinct-zkvm-elf  riscv32im-succinct-zkvm-elf-test  riscv32im-succinct-zkvm-elf-test-xxx_program-85d13723e627cc39
program/src/: main.rs  other_test.rs  zk_op.rs
script/: Cargo.toml  build.rs
script/src/: main.rs
zzz/: Cargo.toml
zzz/src/: main.rs  mainn.rs  risc0.rs  tests.rs  utils.rs
