 [package]
name = "cunt"
version = "0.1.0"
edition = "2021"

[lib]
name = "zk"
path = "src/zk.rs"

[[bin]]
name = "my_bin1"
path = "src/bin1.rs"

[[bin]]
name = "my_bin2"
path = "src/bin2.rs"

[dependencies]
sp1-zkvm ={ git = "https://github.com/succinctlabs/sp1.git", branch = "main" }

[build-dependencies]
sp1-helper ={ git = "https://github.com/succinctlabs/sp1.git" }
cargo_metadata = "0.18.1"
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
regex = "1.5.4"

[workspace]
