[workspace]
[package]
version = "0.1.0"
name = "xxx-program"
edition = "2021"

[dependencies]
# raiko-lib = { path = "../lib", features = ["std"] }

sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
# revm-precompile = { git = "https://github.com/taikoxyz/revm.git", branch = "feat/zk-op", default-features = false, features = [
#     "taiko",
#     "std",
# ] }
# revm-primitives = { git = "https://github.com/taikoxyz/revm.git", branch = "feat/zk-op", default-features = false, features = [
#     "taiko",
#     "std",
# ] }

[dev-dependencies]
substrate-bn = "0.6.0"
