[workspace]
[package]
version = "0.1.0"
name = "xxx-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
raiko-lib = { path = "../lib", features = ["std"] }


[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
cargo_metadata = "0.18.1"
chrono = { version = "0.4.34", default-features = false, features = ["clock"] }
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }