[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "0.21.0" }
cargo_metadata = "0.18"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[package.metadata.risc0]
methods = ["guest"]
